objects/Titre__c.object
<CustomObject>
    <fields>
        <fullName>Code_titre__c</fullName>
        <externalId>true</externalId>
        <label>Code titre</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fili_re__c</fullName>
        <label>Filière</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regt_titre__c</fullName>
        <label>Regt titre</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Titre</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de Titre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titre</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>